# nexusflow

./: .env.example  .gitignore  BOB_SHELL_AUDIT_TRAIL.md  LICENSE  README.md  docker-compose.yml  pyproject.toml  render.yaml  requirements.txt
docker/: Dockerfile
frontend/: package.json  tailwind.config.ts
frontend/app/: globals.css  layout.tsx  page.tsx
nexusflow/: __init__.py
nexusflow/adapters/: confluence.py  datadog.py  github.py  google_calendar.py  jira.py  linear.py  notion.py  pagerduty.py  sendgrid.py  sentry.py  slack.py
nexusflow/agents/: collector.py  executor.py  recommender.py  synthesiser.py  validator.py
nexusflow/api/: main.py
nexusflow/api/middleware/: auth.py
nexusflow/api/routes/: admin.py  auth.py  pipelines.py
nexusflow/core/: approval_gateway.py  indexer.py  memory.py  models.py  observability.py  settings.py
nexusflow/core/state/: pipeline.py
nexusflow/db/: audit.py  models.py  session.py
nexusflow/tests/: test_audit.py  test_indexer.py  test_models.py
nexusflow/tests/adapters/: test_slack.py
nexusflow/tests/agents/: test_collector.py  test_executor.py  test_recommender.py  test_validator.py
nexusflow/tests/api/: test_routes.py
policies/: default.yaml
