[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "nexusflow"
version = "0.1.0"
description = "Autonomous Decision Intelligence for the Distributed Enterprise"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }

dependencies = [
    # API
    "fastapi==0.111.0",
    "uvicorn[standard]==0.30.1",
    "python-multipart==0.0.9",

    # Auth
    "python-jose[cryptography]==3.3.0",
    "passlib[bcrypt]==1.7.4",

    # Database
    "sqlalchemy==2.0.30",
    "alembic==1.13.1",
    "asyncpg==0.29.0",
    "aiosqlite==0.20.0",

    # Agent orchestration
    "langgraph==0.1.9",
    "langchain-core==0.2.5",

    # Vector search (no GPU required)
    "faiss-cpu==1.8.0",
    "rank-bm25==0.2.2",

    # HTTP client
    "httpx==0.27.0",

    # Data validation
    "pydantic==2.7.2",
    "pydantic-settings==2.3.0",

    # Config
    "python-dotenv==1.0.1",
    "pyyaml==6.0.1",

    # Crypto (audit receipts)
    "cryptography==42.0.8",

    # NLP / embeddings (lightweight, CPU)
    "sentence-transformers==3.0.1",
    "torch==2.3.1+cpu",
]

[project.optional-dependencies]
dev = [
    "pytest==8.2.2",
    "pytest-asyncio==0.23.7",
    "pytest-cov==5.0.0",
    "httpx==0.27.0",
    "faker==25.3.0",
    "respx==0.21.1",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["nexusflow/tests"]
addopts = "--cov=nexusflow --cov-report=term-missing -v"

[tool.setuptools.packages.find]
where = ["."]
include = ["nexusflow*"]
